Unsquish the issue messages by adding more side padding

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -3226,11 +3226,11 @@ div.full-screen > button:focus {
 
 .issue-text .issue-icon {
     flex: 0 0 auto;
-    padding: 5px 7px;
+    padding: 2px 3px;
 }
 .issue-text .issue-message {
     flex: 1 1 auto;
-    padding: 5px 0;
+    padding: 4px 5px;
 }
 .issue-label .issue-autofix {
     flex: 0 0 auto;
